modified .env file to remove hard coding from the main script so other users can put their university specific information in their custom .env files.  Also, hard coded new GW specific queries in the script and commented out the Austin queries.

--- a/template.env
+++ b/template.env
@@ -1,1 +1,5 @@
 githubtoken=
+institutionname=George Washington University
+institutionnamepermutations=GW; GWU; George Washington University; The George Washington University
+institutioncity=Washington D.C.
+institutionemaildomain=gwu.edu
